<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/textBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_text" />

    <Button
        android:id="@+id/customFontBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/custom_fonts" />

    <Button
        android:id="@+id/barcodeBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_barcode" />

    <Button
        android:id="@+id/barcode2Btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/print_barcode2" />

    <Button
        android:id="@+id/sampleBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:background="@drawable/customer_button_selector"
        android:text="@string/sample" />

</LinearLayout>