<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tspl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.posprinter.printdemo.activity.TsplActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/content"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/context_and_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tspltext"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/tsplbarcode"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/tsplpic"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bmpCompressionBtn"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/image_compression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/printerStatusBtn"
            style="@style/ButtonText"
            android:layout_marginTop="20dp"
            android:text="@string/printer_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
