<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_Port"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/customer_button_selector"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/portSp"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="#6fff"
                android:entries="@array/port"
                android:popupBackground="@color/button_main"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerStyle" />

            <TextView
                android:id="@+id/addressTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/please_device"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:visibility="gone" />

            <EditText
                android:id="@+id/addressEt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:paddingHorizontal="15dp"
                android:text="192.168.1.10"
                android:textColor="#fff" />

            <ImageView
                android:id="@+id/searchIv"
                style="@style/ClickRipple"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_search_40" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/serialPortNs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerStyle"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/baudRateNs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/baud_rate"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerStyle"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonConnect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:enabled="true"
            android:text="@string/connect" />

        <Button
            android:id="@+id/buttonDisconnect"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/buttonpos"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:text="@string/start_pos_activity" />

        <Button
            android:id="@+id/escMulBtn"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="Esc Multi Connection" />

        <Button
            android:id="@+id/buttonTspl"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:text="@string/start_tspl_activity" />

        <Button
            android:id="@+id/cpclBtn"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:text="@string/start_cpcl_activity" />

        <Button
            android:id="@+id/zplBtn"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            android:text="@string/start_zpl_activity" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


